Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82349

QMenu crash when clicking outside while menu is already being closed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.1
    • 5.12.6
    • None
    • macOS 10.15.3
      Qt 5.12.6
    • All
    • f579be96f7ad0362220f710a03a390d1c1139c52 (qt/qtbase/dev) a5700956af3a23eacd1d69fd31ce3b68cd80ce5c (qt/qtbase/5.15)

    Description

      Create QMenu with Qt::WA_DeleteOnClose attribute.
      Open it.
      Click on some action in this menu.
      Immediately click somewhere outside (in a really short time frame)
      Application crashes.

      It looks like menu is already being deleted when second mouse event is dispatched and processed.
       
      Test app and crash report are attached.

      Attachments

        For Gerrit Dashboard: QTBUG-82349
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            sergei.nevdakh Sergei Nevdakh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes